# Della_Terra

./: .project  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  manage.py  pyproject.toml  requirements.txt
.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  .project-metadata.json.bak  credentials-config.json  data-sources.json  project-settings.json
.github/workflows/: django.yml
Della_Terra/: asgi.py  settings.py  urls.py  wsgi.py
github/workflows/: django.yml  github-actions-demo.yml
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
