[tool.poetry]
name = "della-terra"
version = "0.1.0"
description = "Della Terra store"
authors = ["Lucas Montezuma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
factory-boy = "^3.3.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
