[tool.poetry]
name = "Della_Terra"
version = "0.1.0"
description = "Della Terra store"
authors = ["Lucas Montezuma"]

[tool.poetry.dependencies]
python = "^3.10.5"
pytest = "^8.2.2"
factory-boy = "^3.3.0"
django = "^5.0.6"
psycopg2 = "^2.9.0" 
gitpython = "^3.1.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"